// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-DensityHeatmapChart 基础密度热力图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    44,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "color": "#F51D27-#FA541C-#FF8C12-#FFC838-#FAFFA8-#80FF73-#12CCCC-#1890FF-#6E32C2",
  "colorField": "tmp",
  "data": Array [],
  "legend": false,
  "padding": "auto",
  "radius": 15,
  "renderer": "canvas",
  "sizeRatio": 15,
  "type": "density",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "line": null,
    "nice": true,
    "tickLine": null,
  },
  "xField": "g",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "l",
}
`;

exports[`Plots-DensityHeatmapChart 旧版密度热力图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    44,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "color": Array [
    "#295599",
    "#3e94c0",
    "#78c6d0",
    "#b4d9e4",
    "#fffef0",
    "#f9cdac",
    "#ec7d92",
    "#bc448c",
  ],
  "colorField": "tmp",
  "data": Array [],
  "legend": false,
  "padding": "auto",
  "radius": 15,
  "renderer": "canvas",
  "sizeRatio": 15,
  "type": "density",
  "xAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "line": null,
    "nice": true,
    "tickLine": null,
  },
  "xField": "g",
  "yAxis": Object {
    "grid": Object {
      "alignTick": false,
      "line": Object {
        "style": Object {
          "lineDash": null,
          "lineWidth": 1,
          "stroke": "#f0f0f0",
        },
      },
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "l",
}
`;
